--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -51,4 +51,10 @@
   font-style: normal;
   font-display: swap;
 }
-
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
