--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,17 +2,18 @@
 @import "./_variables.scss";
 @import "./fonts.scss";
 
-hr{
+hr {
     border: none;
-    background-color: #C4C4C4; 
-    height: 1px; 
+    background-color: #c4c4c4;
+    height: 1px;
 }
 .container {
     display: flex;
     text-align: center;
     justify-content: center;
-  } 
-  .header {
+    width: 100%;
+}
+.header {
     width: 100%;
     position: fixed;
     z-index: 2;
@@ -21,60 +22,98 @@ hr{
     max-height: 72px;
     box-shadow: 1px 1px 1px $gray;
     &__nav {
-      display: flex;
-      align-items: center;
-      width: 720px;
-      gap: 15px;
-      text-decoration: none;
-      font-family: Inter;
-      &-menu {
-        gap: 15px;
         display: flex;
+        align-items: center;
+        width: 940px;
+        gap: 15px;
         text-decoration: none;
-        &-item {
-            list-style-type: none;
-          a {
-            transition: all 0.3s linear;
-            color: $white;
+        font-family: Inter;
+        &-menu {
+            gap: 15px;
+            display: flex;
             text-decoration: none;
-            text-transform: uppercase;
-            &:hover {
-              color: #ffd700;
+            &-item {
+                list-style-type: none;
+                a {
+                    transition: all 0.3s linear;
+                    color: $white;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    &:hover {
+                        color: #ffd700;
+                    }
+                }
             }
-          }
         }
-      }
-    }
-  }
-  .about {
-      
-    &-main {
-    }
-    &__background {
-      width: 100vw;
-      height: 100vh;
-      background-image: url("/img/Фон.svg");
-      background-size: 100%;
-      background-repeat: no-repeat;
-      position: relative;
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: 1;
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-image: url("/img/Фон.svg");
-      }
-  
-      &-blur {
-        backdrop-filter: blur(8px);
-        height: 100vh;
-        width: 100%;
-        position: relative;
-      }
     }
 }
+.about {
+    &__main {
+        background-image: url("/src/img/общийФон2.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        backdrop-filter: blur(100px);
+        height: 700px;
+        max-width: 1920px;
+        margin: 0 auto;
+        &-container {
+            top: -15px;
+            left: 80px;
+            height: 100%;
+            width: 1100px;
+            background-image: url("/src/img/ЦентральныйФон.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            position: relative;
+            margin: auto;
+        }
+        &-textTop {
+            position: absolute;
+            font-family: Inter;
+            color: $white;
+            bottom: 0;
+            left: 5px;
+            margin-bottom: 100px;
+            font-size: 42px;
+        }
+        &-textBottom {
+            position: absolute;
+            font-family: Inter;
+            color: $white;
+            bottom: 0;
+            margin-bottom: 60px;
+            font-size: 24px;
+        }
+        &-info {
+            margin-top: 20px;
+            max-width: 1100px;
+            margin-left: auto;
+            margin-right: 17%;
+            font-family: inter;
+            font-size: 16px;
+            line-height: 20px;
+        }
+    }
+    p {
+        margin-top: 0.5em;
+        margin-bottom: 1em;
+    }
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-top: 600px;
+    background: $red;       
+    &__info {
+        margin-left: 120px;
+        padding: 40px 0px 40px 0px;
+        display: flex;
+        gap: 530px;
+        text-decoration: none;
+        font-family: Inter;
+        color: $white;
+    }
+}
+
