--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@ hr {
     text-align: center;
     justify-content: center;
     width: 100%;
+    max-width: 1300px;
 }
 .header {
     width: 100%;
@@ -20,11 +21,12 @@ hr {
     margin-bottom: 10%;
     background-color: $green;
     max-height: 72px;
-    box-shadow: 1px 1px 1px $gray;
+    box-shadow: 0px 7px 6px -1px rgba(34, 60, 80, 0.34);
     &__nav {
+        margin-left: auto;
+        margin-right: auto;
         display: flex;
         align-items: center;
-        width: 940px;
         gap: 15px;
         text-decoration: none;
         font-family: Inter;
@@ -50,30 +52,31 @@ hr {
 .about {
     &__main {
         background-image: url("/src/img/общийФон2.png");
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
-        backdrop-filter: blur(100px);
+        background-position: center;
         height: 700px;
         max-width: 1920px;
         margin: 0 auto;
         &-container {
-            top: -15px;
-            left: 80px;
-            height: 100%;
+            height: 95%;
             width: 1100px;
             background-image: url("/src/img/ЦентральныйФон.png");
             background-size: cover;
             background-repeat: no-repeat;
             position: relative;
             margin: auto;
+            @media (max-width: 1250px) {
+                width: 100%;
+                background-size: cover;
+            }
         }
         &-textTop {
             position: absolute;
             font-family: Inter;
             color: $white;
             bottom: 0;
-            left: 5px;
-            margin-bottom: 100px;
+            margin-bottom: 70px;
             font-size: 42px;
         }
         &-textBottom {
@@ -81,17 +84,19 @@ hr {
             font-family: Inter;
             color: $white;
             bottom: 0;
-            margin-bottom: 60px;
+            margin-bottom: 30px;
             font-size: 24px;
+            @media (max-width: 562px) {
+                margin-bottom: 15px;
+            }
         }
         &-info {
             margin-top: 20px;
             max-width: 1100px;
             margin-left: auto;
-            margin-right: 17%;
+            margin-right: auto;
             font-family: inter;
             font-size: 16px;
-            line-height: 20px;
         }
     }
     p {
@@ -105,15 +110,23 @@ hr {
     width: 100%;
     height: 100%;
     margin-top: 600px;
-    background: $red;       
+    background: $red;
+    @media screen and (max-width: 676px) {
+        margin-top: 700px;
+    }
+    @media screen and (max-width: 562px) {
+        margin-top: 750px;
+    }
+    @media screen and (max-width: 500px) {
+        margin-top: 800px;
+    }
     &__info {
-        margin-left: 120px;
+        width: 58%;
         padding: 40px 0px 40px 0px;
         display: flex;
-        gap: 530px;
+        justify-content: space-between;
         text-decoration: none;
         font-family: Inter;
         color: $white;
     }
 }
-
