--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,21 +8,16 @@ hr {
     height: 1px;
 }
 .container {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
     max-width: 1300px;
+    margin: 0 auto;
 }
 .header {
+    height: 72px;
     width: 100%;
-    position: fixed;
-    z-index: 2;
-    margin-bottom: 10%;
     background-color: $green;
-    max-height: 72px;
     box-shadow: 0px 7px 6px -1px rgba(34, 60, 80, 0.34);
     &__nav {
+        width: 55%;
         margin-left: auto;
         margin-right: auto;
         display: flex;
@@ -30,10 +25,21 @@ hr {
         gap: 15px;
         text-decoration: none;
         font-family: Inter;
+        @media (max-width: 600px) {
+            flex-direction: column;
+            background-color: $green;
+            width: 100%;
+            z-index: 1;
+        }
         &-menu {
             gap: 15px;
             display: flex;
             text-decoration: none;
+            @media (max-width: 600px) {
+              flex-direction: column;
+              padding: 0;
+              align-items: baseline;
+            }
             &-item {
                 list-style-type: none;
                 a {
@@ -51,24 +57,25 @@ hr {
 }
 .about {
     &__main {
-        background-image: url("/src/img/общийФон2.png");
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 700px;
-        max-width: 1920px;
-        margin: 0 auto;
         &-container {
-            height: 95%;
-            width: 1100px;
-            background-image: url("/src/img/ЦентральныйФон.png");
+            background-image: url("/src/img/общийФон2.png");
             background-size: cover;
             background-repeat: no-repeat;
             position: relative;
-            margin: auto;
+            display: flex;
+
             @media (max-width: 1250px) {
                 width: 100%;
                 background-size: cover;
+            }
+            &__inner{
+              margin: 0 auto;
+
+              img{
+                width: 100%;
+                min-height: 300px;
+                object-fit: cover;
+              }
             }
         }
         &-textTop {
@@ -107,19 +114,7 @@ hr {
 .footer {
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    margin-top: 600px;
     background: $red;
-    @media screen and (max-width: 676px) {
-        margin-top: 700px;
-    }
-    @media screen and (max-width: 562px) {
-        margin-top: 750px;
-    }
-    @media screen and (max-width: 500px) {
-        margin-top: 800px;
-    }
     &__info {
         width: 58%;
         padding: 40px 0px 40px 0px;
